--- a/static/css/style.css
+++ b/static/css/style.css
@@ -266,25 +266,9 @@ body {
   background-color: transparent;
 }
 
-.card-body {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
 .card-img-top {
   flex: 1;
   object-fit: cover;
-}
-
-.card-size {
-  margin-bottom: 20px !important;
-}
-
-.card-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
 }
 
 .footer a i {
@@ -295,3 +279,43 @@ body {
 .footer a {
   text-decoration: none;
 }
+
+.login p {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 15px; 
+}
+
+.login label {
+  min-width: 150px;
+  margin-right: 15px;
+}
+
+.login input[type="text"],
+.login input[type="email"],
+.login input[type="password"] {
+  width: 100%;
+  padding: 8px; 
+  box-sizing: border-box; 
+}
+
+.helptext {
+  display: none;
+}
+
+.fixed-height-img {
+  height: 300px; 
+  object-fit: cover;
+}
+
+.hover-effect {
+  transition: transform 0.3s ease-in-out;
+  position: relative;
+}
+
+.hover-effect:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
