--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,6 +4,7 @@
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
 <div class="container">
     <div class="row">
