--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -21,9 +21,9 @@
                 <button class="btn btn-primary" type="submit">{% trans 'Sign Out' %}</button>
             </form>
         </div>
-    </div>
-    <div class="col-md-12 card-body  align-items-center justify-content-center">
-        <img src="{% static 'images/sign-out.webp' %}"  alt="Sign In Image" class="img-fluid" style="max-width: 40%; height: auto;">
+        <div class="col-md-12 d-flex  align-items-center justify-content-center">
+            <img src="{% static 'images/sign-out.webp' %}"  alt="Sign In Image" class="img-fluid mx-auto" style="max-width: 40%; height: auto;">
+        </div>
     </div>
 </div>
 {% endblock %}
