--- a/templates/index.html
+++ b/templates/index.html
@@ -182,7 +182,7 @@
 <!-- ------------------------------------------------------- -->
 <!-- ------------------------------------------------------- -->
 <section class="section bg-white">
-    <div class="container text-center mt-5">
+    <div class="container text-center mt-5 mb-5">
         <h2 class="text-9 fw-500">Best Hotels: High Ratings and Guest Preference</h2>
         <div class="row">
             <div class="col-12 mt-3 left">
