--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -17,7 +17,7 @@
     </div>
     <div class="row">
         <div class="col-md-6 d-flex align-items-center justify-content-center">
-            <form class="login card  shadow p-3 pt-5 " method="POST" action="{% url 'account_signup' %}">
+            <form class="login card  shadow p-3 pt-5 form-control" method="POST" action="{% url 'account_signup' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 {% if redirect_field_value %}
@@ -26,7 +26,7 @@
                 <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
             </form>
         </div>
-        <div class="col-md-6 card-body  align-items-center justify-content-center">
+        <div class="col-md-6 card-body  d-flex align-items-center justify-content-center">
             <img src="{% static 'images/sign-up.webp' %}"  alt="Sign In Image" class="img-fluid" style="max-width: 80%; height: auto;">
         </div>
     </div>
