--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -8,6 +8,12 @@
 {% load static %}
 {% block content %}
 
+<style>
+    .login label[for="id_email"] {
+        display: none;
+    }
+</style>
+
 <div class="container">
     <div class="row">
         <div class="col-md-12 text-center  mt-5">
