--- a/templates/booking.html
+++ b/templates/booking.html
@@ -21,7 +21,7 @@
                             {{ form|crispy }}
                             <p style="margin-top: 3rem;"><strong>Total Price:</strong> € <span id="totalPrice">0</span></p>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block" style="display: block; margin-top: 10px; margin-bottom: 10px">Book Now</button>
+                            <button type="submit" class="btn btn-primary btn-block custom-search-btn" style="display: block; margin-top: 10px; margin-bottom: 10px">Book Now</button>
                         </form>
                     </div>
                 </div>
