--- a/templates/edit_booking.html
+++ b/templates/edit_booking.html
@@ -21,7 +21,7 @@
                                 {{ form.as_p }}
                                 <p style="margin-top: 3rem;"><strong>Total Price:</strong> € <span id="totalPrice">{{ total_price }}</span></p>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block">Save Changes</button>
+                            <button type="submit" class="btn btn-primary btn-block custom-search-btn">Save Changes</button>
                         </form>
                     </div>
                 </div>
