--- a/templates/hotel_detail.html
+++ b/templates/hotel_detail.html
@@ -29,7 +29,7 @@
                             <label for="checkout" class="form-label">Check-Out Date</label>
                             <input type="date" class="form-control" id="checkout" name="checkout">
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block">Search</button>
+                        <button type="submit" class="btn btn-primary btn-block custom-search-btn">Search</button>
                     </form>
                 </div>
             </div>
