--- a/templates/base.html
+++ b/templates/base.html
@@ -2,136 +2,99 @@
 
 <!DOCTYPE html>
 <html class="h-100">
-  <head>
-    <title>Booking Hotel</title>
 
-    <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml">
+<head>
+  <title>Booking Hotel</title>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link
-      rel="stylesheet"
-      href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
-    />
-  
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-  </head>
-  <body class="d-flex flex-column h-100 main-bg">
-    <!-- Navigation -->
+  <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml">
 
-    <nav class="navbar navbar-expand-lg navbar-dark shadow">
-      <div class="container-fluid">
-        <a class="navbar-brand text-white" href="{% url 'home' %}"
-          >Booking Hotel</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarText"
-          aria-controls="navbarText"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+  <!-- ---------------------------------------------------------------- -->
+
+  <!-- ---------------------------------------------------------------- -->
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+</head>
+
+<body class="d-flex flex-column h-100 main-bg">
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark shadow blue-bg ">
+    <div class="container">
+        <a class="navbar-brand text-white" href="{% url 'home' %}">Booking Hotel</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a
-                class="nav-link active text-white"
-                aria-current="page"
-                href="{% url 'home' %}"
-                >Home</a
-              >
-            </li>
+              <a class="nav-link active text-white" aria-current="page" href="{% url 'home' %}">Home</a></li>
             {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link text-white" href="{% url 'my_booking'%}"
-                >My booking</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="{% url 'account_logout' %}"
-                >Logout</a
-              >
-            </li>
+            <li class="nav-item"><a class="nav-link text-white" href="{% url 'my_booking'%}">My booking</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="{% url 'account_logout' %}">Logout</a></li>
             {% else %}
-            <li class="nav-item">
-              <a class="nav-link text-white" href="{% url 'account_signup' %}"
-                >Register</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="{% url 'account_login' %}"
-                >Login</a
-              >
-            </li>
+            <li class="nav-item"><a class="nav-link text-white" href="{% url 'account_signup' %}">Register</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="{% url 'account_login' %}">Login</a></li>
             {% endif %}
           </ul>
           <span class="navbar-text text-muted"> </span>
         </div>
-      </div>
-    </nav>
+    </div>
+  </nav>
 
-    <div class="container">
-      <div class="row">
-          <div class="col-md-8 offset-md-2">
-              {% for message in messages %}
-              <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
-                  {{ message | safe }}
-                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-              </div>
-              {% endfor %}
-          </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        {% for message in messages %}
+        <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+          {{ message | safe }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
       </div>
+    </div>
   </div>
 
-    <main class="flex-shrink-0 main-bg">
-      {% block content %}
-      <!-- Content  -->
-      {% endblock content %}
-    </main>
+  <main class="flex-shrink-0 main-bg">
+    {% block content %}
+    <!-- Content  -->
+    {% endblock content %}
+  </main>
 
-    <!-- Footer -->
-    <footer class="footer mt-auto py-3 blue-bg">
-      <p class="m-0 text-center text-white">
-        <a href="https://www.facebook.com/" target="_blank" class="ms-3">
-          <i class="fab fa-facebook-square"></i>
-        </a>
-        <a href="https://twitter.com/" target="_blank" class="ms-3">
-          <i class="fab fa-twitter-square"></i>
-        </a>
-        <a href="https://www.instagram.com/" target="_blank" class="ms-3">
-          <i class="fab fa-instagram-square"></i>
-        </a>
-        <a href="https://www.youtube.com/" target="_blank" class="ms-3">
-          <i class="fab fa-youtube-square"></i>
-        </a>
-      </p>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"
-        integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script src="{% static 'js/script.js' %}"></script>
-  </body>
+  <!-- Footer -->
+  <footer class="footer mt-auto py-3 blue-bg">
+    <p class="m-0 text-center text-white">
+      <a href="https://www.facebook.com/" target="_blank" class="ms-3">
+        <i class="fab fa-facebook-square"></i>
+      </a>
+      <a href="https://twitter.com/" target="_blank" class="ms-3">
+        <i class="fab fa-twitter-square"></i>
+      </a>
+      <a href="https://www.instagram.com/" target="_blank" class="ms-3">
+        <i class="fab fa-instagram-square"></i>
+      </a>
+      <a href="https://www.youtube.com/" target="_blank" class="ms-3">
+        <i class="fab fa-youtube-square"></i>
+      </a>
+    </p>
+  </footer>
+  <!-- ---------------------------------------------------------------- -->
+  <!-- ---------------------------------------------------------------- -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"
+    integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="{% static 'js/script.js' %}"></script>
+</body>
+
 </html>
