Add validation dates in forms

--- a/templates/404.html
+++ b/templates/404.html
@@ -20,6 +20,7 @@
     </style>
 </head>
 <body>
+    <a href="{% url 'home' %}">Return to Home</a>
     <img src="{% static 'images/image404.webp' %}" alt="Page Not Found">
     <h1>Page Not Found</h1>
     <p>The requested page could not be found.</p>
