Update design review block on room detail page

--- a/templates/hotel_detail.html
+++ b/templates/hotel_detail.html
@@ -52,7 +52,7 @@
 
 <div class="container mt-5">
     <h2>Rooms in this Hotel</h2>
-    <table class="table table-bordered border-primary table-hover table-responsive">
+    <table class="table table-bordered border-primary table-hover table-responsive text-center">
         <thead class="blue-hat">
             <tr>
                 <th>Room type</th>
