--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -31,8 +31,8 @@
       </div>
 
       <!-- Reviews Block -->
-      <div class="card mb-4 mt-3">
-        <h3>Reviews:</h3>
+      <div class="card mb-4 mt-3 ">
+        <h4>Reviews:</h4>
         <div class="card-body">
           {% if reviews %}
           {% for review in reviews %}
@@ -62,8 +62,29 @@
           </div>
           {% else %}
           {% if user.is_authenticated %}
-          <h3>Leave a review:</h3>
-          <p>Posting as: {{ user.username }}</p>
+          <h4>Did you like room? Like it:</h4>
+          <div class="col-1">
+            <!-- ------------------------------------------------------------- -->
+            <strong>
+              {% if user.is_authenticated %}
+              <form class="d-inline" action="{% url 'room_like' room.slug %}" method="POST">
+                {% csrf_token %}
+                {% if liked %}
+                <button type="submit" name="likeroom_id" value="{{room.slug}}" class="btn-like"><i
+                    class="fas fa-heart"></i></button>
+                {% else %}
+                <button type="submit" name="likeroom_id" value="{{room.slug}}" class="btn-like"><i
+                    class="far fa-heart"></i></button>
+                {% endif %}
+              </form>
+              {% else %}
+              <span class="text-secondary"><i class="far fa-heart"></i></span>
+              {% endif %}
+              <span class="text-secondary">{{ room.number_of_likes }} </span>
+            </strong>
+          </div>
+          <h5>Leave a review:</h5>
+          <p>Review from: {{ user.username }}</p>
           <form method="post" style="margin-top: 1em">
             {{ reviews_form | crispy }} {% csrf_token %}
             <button type="submit" class="btn btn-warning btn-block mt-2 custom-search-btn ">Submit</button>
@@ -84,13 +105,13 @@
         </div>
         <div class="col card mb-4 mt-3 left top">
           <div class="card-body">
-              <div class="container mt-5">
+              <div class="container mt-2">
                 <h4>Facilities:</h4>
                 <div class="row">
                     {% for facility in room.facilities.all %}
                         <div class="col-md-3 mb-1">
                             <div class="card">
-                                <div class="card-body text-center">
+                                <div class="card-body text-center p-0">
                                     <p class="mt-0">{{ facility.name }}</p>
                                 </div>
                             </div>
@@ -105,23 +126,6 @@
               <!-- Likes -->
               <div class="col-1">
                 <!-- ------------------------------------------------------------- -->
-                <strong>
-                  {% if user.is_authenticated %}
-                  <form class="d-inline" action="{% url 'room_like' room.slug %}" method="POST">
-                    {% csrf_token %}
-                    {% if liked %}
-                    <button type="submit" name="likeroom_id" value="{{room.slug}}" class="btn-like"><i
-                        class="fas fa-heart"></i></button>
-                    {% else %}
-                    <button type="submit" name="likeroom_id" value="{{room.slug}}" class="btn-like"><i
-                        class="far fa-heart"></i></button>
-                    {% endif %}
-                  </form>
-                  {% else %}
-                  <span class="text-secondary"><i class="far fa-heart"></i></span>
-                  {% endif %}
-                  <span class="text-secondary">{{ room.number_of_likes }} </span>
-                </strong>
               </div>
             </div>
             <!-- Booking Button -->
