Add description work process on readmi file

--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -41,7 +41,7 @@
             <p class="font-weight-bold">
               {{ review.name }}
               <span class="text-muted font-weight-normal">
-                {{ review.created_on }} wrote:
+                wrote {{ review.created_on|date:"d.m.Y" }}:
               </span>
             </p>
             {{ review.body | linebreaks }}
