Update widget calendar on search panel

--- a/templates/city_hotels.html
+++ b/templates/city_hotels.html
@@ -20,11 +20,11 @@
                         </div>
                         <div class="mb-3">
                             <label for "checkin" class="form-label">Check-In Date</label>
-                            <input type="date" class="form-control" id="checkin" name="checkin">
+                            <input type="text" class="form-control" id="checkin" name="checkin">
                         </div>
                         <div class="mb-3">
                             <label for "checkout" class="form-label">Check-Out Date</label>
-                            <input type="date" class="form-control" id="checkout" name="checkout">
+                            <input type="text" class="form-control" id="checkout" name="checkout">
                         </div>
                         <button type="submit" class="btn btn-primary btn-block custom-search-btn">Search</button>
                     </form>
