--- a/templates/hotel_detail.html
+++ b/templates/hotel_detail.html
@@ -22,12 +22,12 @@
                         <div class="mb-3">
                         </div>
                         <div class="mb-3">
-                            <label for="checkin" class="form-label">Check-In Date</label>
-                            <input type="date" class="form-control" id="checkin" name="checkin">
+                            <label for "checkin" class="form-label">Check-In Date</label>
+                            <input type="text" class="form-control" id="checkin" name="checkin">
                         </div>
                         <div class="mb-3">
-                            <label for="checkout" class="form-label">Check-Out Date</label>
-                            <input type="date" class="form-control" id="checkout" name="checkout">
+                            <label for "checkout" class="form-label">Check-Out Date</label>
+                            <input type="text" class="form-control" id="checkout" name="checkout">
                         </div>
                         <button type="submit" class="btn btn-primary btn-block custom-search-btn">Search</button>
                     </form>
