--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -18,13 +18,13 @@
               </select>
             </div>
             <div class="mb-3">
-              <label for="checkin" class="form-label">Check-In Date</label>
-              <input type="date" class="form-control" id="checkin" name="checkin">
-            </div>
-            <div class="mb-3">
-              <label for="checkout" class="form-label">Check-Out Date</label>
-              <input type="date" class="form-control" id="checkout" name="checkout">
-            </div>
+              <label for "checkin" class="form-label">Check-In Date</label>
+              <input type="text" class="form-control" id="checkin" name="checkin">
+          </div>
+          <div class="mb-3">
+              <label for "checkout" class="form-label">Check-Out Date</label>
+              <input type="text" class="form-control" id="checkout" name="checkout">
+          </div>
             <button type="submit" class="btn btn-primary btn-block custom-search-btn">Search</button>
           </form>
         </div>
