--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                                 <div class="input-group">
                                     <span class="input-group-text"><i class="bi bi-calendar fs-3 mt-2"></i></span>
                                     <label for="checkin" class="form-label sr-only">Check-In Date</label>
-                                    <input type="text" class="form-control" id="checkin" name="checkin">
+                                    <input type="date" class="form-control" id="checkin" name="checkin">
                                 </div>
                             </div>
                         </div>
@@ -75,7 +75,7 @@
                                 <div class="input-group">
                                     <span class="input-group-text"><i class="bi bi-calendar-check fs-3 mt-2"></i></span>
                                     <label for="checkout" class="form-label sr-only">Check-Out Date</label>
-                                    <input type="text" class="form-control" id="checkout" name="checkout">
+                                    <input type="date" class="form-control" id="checkout" name="checkout">
                                 </div>
                             </div>
                         </div>
